--- a/常见的问题点.md
+++ b/常见的问题点.md
@@ -1,6 +1,10 @@
-# 打开摄像头会直接退出程序
+# 1.打开摄像头会直接退出程序
 问题分析：如果保证摄像头id都可以获取到的话，最大的可能性就是没有在AndroidManifest.xml中开启摄像头权限
 解决方案：在AndroidManifest.xml中添加摄像头权限
 ~~~java
 <uses-permission android:name="android.permission.CAMERA"/>
 ~~~
+
+# 2.在debug的时候被调试机器出现 waiting for debugger
+问题分析：没有将android studio和被调试机器的进程开启
+解决方案：将android studio -> Run -> Attach debugger to android process设置成和机器相连即可
