--- a/常见的问题点.md
+++ b/常见的问题点.md
@@ -8,3 +8,9 @@
 # 2.在debug的时候被调试机器出现 waiting for debugger
 问题分析：没有将android studio和被调试机器的进程开启
 解决方案：将android studio -> Run -> Attach debugger to android process设置成和机器相连即可
+
+# 3.新建项目后，运行报错：Installed Build Tools revision 32.0.0 is corrupted.
+解决方案：将gradle.build(Module:app)中的  buildToolsVersion "32.0.0" ->    buildToolsVersion "30.0.3"
+
+# 4.新疆项目后，运行报错：minSdkVersion 相关报错
+解决方案：将gradle.build(Moudle:app)中的 minSdkVersion 32 -> minSdkVersion 28
