--- a/常见的问题点.md
+++ b/常见的问题点.md
@@ -14,3 +14,6 @@
 
 # 4.新疆项目后，运行报错：minSdkVersion 相关报错
 解决方案：将gradle.build(Moudle:app)中的 minSdkVersion 32 -> minSdkVersion 28
+
+# 5.摄像头调用的时候，可以进行调用，但是不正常显示，显示为雪花
+解决方案：首先确定模拟器开启了摄像头设备，然后确定给了apk权限。
