--- a/常见的问题点.md
+++ b/常见的问题点.md
@@ -12,7 +12,7 @@
 # 3.新建项目后，运行报错：Installed Build Tools revision 32.0.0 is corrupted.
 解决方案：将gradle.build(Module:app)中的  buildToolsVersion "32.0.0" ->    buildToolsVersion "30.0.3"
 
-# 4.新疆项目后，运行报错：minSdkVersion 相关报错
+# 4.新建项目后，运行报错：minSdkVersion 相关报错
 解决方案：将gradle.build(Moudle:app)中的 minSdkVersion 32 -> minSdkVersion 28
 
 # 5.摄像头调用的时候，可以进行调用，但是不正常显示，显示为雪花
